fix(player): menu items outside scroll not painting on safari

--- a/packages/vidstack/styles/player/default/menus.css
+++ b/packages/vidstack/styles/player/default/menus.css
@@ -166,6 +166,7 @@
   min-width: var(--media-menu-min-width, 280px);
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb-bg) var(--scrollbar-track-bg);
+  transform: translate3d(0, 0, 0);
 }
 
 :where(.vds-menu-items)::-webkit-scrollbar {
